<resources>
    <string name="app_name">AniFost</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="enter_name">Enter Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>

    <string-array name="my_array">
        <item>One</item>
        <item>Two</item>
        <item>Three Or More</item>
    </string-array>

    <string-array name="garden_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="other_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
</resources>